# autonomous-auditor

./: .env  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CI-POLICY-COMPLETE.md  ECOSYSTEM.md  INTERFACE.md  LICENSE  MANIFEST.in  POLICY-CONTRACTS.md  PORTFOLIO.md  README.md  SPECIALIZATION.md  USAGE-GUIDE.md  VALIDATION-PROOF.md  WORKING-WITH-RESULTS.md  agent.py  agent_memory.db  api.py  audit-policy  audit-report.md  auditor  auditor.py  autonomous-auditor  ci-demo.sh  ci-test.json  cli.py  config.json  hygiene-report.json  install.sh  main.py  policy.py  policy.yaml  pyproject.toml  requirements.txt  soc2-after.json  soc2-before.json  soc2-final.json  test-audit.json  test_guarantees.py  (+4 more)
docs/ci/: github-actions.md  gitlab-ci.md
examples/: complete-workflow.sh
examples/.github/workflows/: auditor.yml
policy-packs/: README.md  finserv.yaml  gdpr.yaml  soc2.yaml
prompts/: codebase_auditor.txt  config_inspector.txt  default.txt  repo_hygiene.txt
